ddetect (1.02) UNRELEASED; urgency=low

  * Colin Watson
    - Don't bother trying to load psmouse in d-i; just register it for use
      after the first reboot.
    - Move mac-io hardware detection out to a separate file, only installed
      on powerpc.
  * Joshua Kwan
    - Add USB stuff to devnames.txt.
    - Don't try to load sbp2 unless we also have scsi_mod lying around.

 -- Joshua Kwan <joshk@triplehelix.org>  Wed, 25 Aug 2004 16:51:17 -0700

ddetect (1.01) unstable; urgency=medium

  * Joshua Kwan
    - Add more entries to devnames.txt.
    - grep for ^${module}: to prevent e1000's description matching for
      e100. (Closes: #262626, #266328)
    - 'hardware architecture', not 'hardware architect' in control.
  * Sven Luther
    - Added support for loading the psmouse modules on powerpc/chrp
      and prep too, since X is complaining after the reboot.
  * Updated translations:
    - Danish (da.po) by Claus Hindsgaul
    - Basque (eu.po) by Piarres Beobide Egaña
    - French (fr.po) by Christian Perrier
    - Lithuanian (lt.po) by Kęstutis Biliūnasn
    - Latvian (lv.po) by Aigars Mahinovs

 -- Joshua Kwan <joshk@triplehelix.org>  Mon, 23 Aug 2004 01:44:51 -0700

ddetect (1.00) unstable; urgency=low

  * Updated translations: 
    - Swedish (sv.po) by Per Olofsson

 -- Joey Hess <joeyh@debian.org>  Sun, 25 Jul 2004 19:15:02 -0400

ddetect (0.110) unstable; urgency=low

  * Joey Hess
    - Have discover output ide devices, so sata modules are loaded.
      Closes: #260658

 -- Joey Hess <joeyh@debian.org>  Sun, 25 Jul 2004 14:04:28 -0400

ddetect (0.109) unstable; urgency=low

  * Colin Watson
    - Detect BMAC Ethernet controllers, found on some PowerMacs. Ideally
      discover would be able to walk the mac-io bus ... (closes: #260427)
    - Add myself to Uploaders.
  * Joey Hess
    - Fix display of card names in the missing modules list.
  * Updated translations:
    - Arabic (ar.po) by Abdulaziz Al-Arfaj
    - German (de.po) by Dennis Stampfer